@@ -1,15 +1,0 @@
-@comment $NetBSD: PLIST,v 1.8 2022/01/14 17:52:01 wiz Exp $
-${PYSITELIB}/pygoogle.pth
-${PYSITELIB}/pygoogle/GoogleSOAPFacade.py
-${PYSITELIB}/pygoogle/GoogleSOAPFacade.pyc
-${PYSITELIB}/pygoogle/GoogleSOAPFacade.pyo
-${PYSITELIB}/pygoogle/SOAP.py
-${PYSITELIB}/pygoogle/SOAP.pyc
-${PYSITELIB}/pygoogle/SOAP.pyo
-${PYSITELIB}/pygoogle/google.py
-${PYSITELIB}/pygoogle/google.pyc
-${PYSITELIB}/pygoogle/google.pyo
-${PYSITELIB}/pygoogle/googletest.py
-${PYSITELIB}/pygoogle/googletest.pyc
-${PYSITELIB}/pygoogle/googletest.pyo
-${PYSITELIB}/pygoogle/${EGG_INFODIR}
